IN-418 force align letters to baseline to fix cross-browser vertical centering differences

--- a/source/css/scss/app/components/avatar-initial.scss
+++ b/source/css/scss/app/components/avatar-initial.scss
@@ -21,16 +21,34 @@
 		background-color: $white;
 	}
 
-	span {
+	div {
 		position: absolute;
-		left: 50%;
-		top: 50%;
-		transform: translate(-50%, -50%);
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		text-align: center;
+		overflow: hidden;
+	}
+
+	span.letter {
+		//position: absolute;
+		//left: 50%;
+		//top: 50%;
+		display: inline-block;
+		line-height: 0;
+		height: 100%;
+		transform: translate(0, -33%);
 		font-weight: bold;
 
 		// between screen width 38rem and 55rem, scale font size from 2.8rem to 4.3rem
 		// see https://madebymike.com.au/writing/precise-control-responsive-typography/
 		font-size: calc(2.8rem + (4.3 - 2.8) * ((100vw - 38rem) / (55 - 38)));
+	}
+
+	span.strut {
+		display: inline-block;
+		height: 100%;
 	}
 }
 
